<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:elevation="1.0dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="4dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        card_view:cardCornerRadius="6dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/user_name_label"
                android:text="aaaaa"
                android:textStyle="bold"
                card_view:layout_constraintStart_toEndOf="@+id/user_name_label"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rank_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/rank"
                android:textColor="#000000"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toStartOf="@+id/rank"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="sdf"
                android:textColor="#000000"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/best_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/best_language"
                android:textColor="#000000"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>