<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/details_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/details_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_name_label" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/details_name"
            app:layout_constraintTop_toBottomOf="@+id/details_name" />

        <TextView
            android:id="@+id/url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/url"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_label" />

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/category"
            app:layout_constraintTop_toBottomOf="@+id/category" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/colorPrimaryDark"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/url_label"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/created_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/created_by"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/url_label"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/created_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/url"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/created_by_label"
            app:layout_constraintTop_toBottomOf="@+id/created_by_label" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/description_label"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <TextView
            android:id="@+id/total_attempts"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/url" />

        <TextView
            android:id="@+id/total_completed"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/url" />

        <TextView
            android:id="@+id/total_stars"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/url" />

        <TextView
            android:id="@+id/vote_score"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/url" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/total_completed"
            app:layout_constraintTop_toBottomOf="@+id/url"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/total_stars"
            app:layout_constraintTop_toBottomOf="@+id/url"
            app:srcCompat="@drawable/vote" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/total_attempts"
            app:layout_constraintTop_toBottomOf="@+id/url"
            app:srcCompat="@drawable/completed" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url"
            app:srcCompat="@drawable/attempt" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>